[package]
name = "rust_gdl90"
version = "0.1.0"
authors = ["johnstanford"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
lazy_static = "1.4.0"
regex = "1.3.5"

serde = { version = "1.0.60", features = ["derive"] }
